Set up the Html for a grid layout in the modal window. Will need to modify the JS function accordingly.

--- a/index.html
+++ b/index.html
@@ -29,8 +29,20 @@
         Où tu veux, <strong>quand tu veux."</strong>
     </section> -->
     <div class="overlay">
-        <!-- <div id="infoWindow">
-        </div> -->
+        <div class="infoWindow">
+            <div class="infoWindow__title">
+                <div class="infoWindow__title__line1"></div>
+                <div class="infoWindow__title__line2"></div>
+            </div>
+            <div class="infoWindow__informations">
+                <div class="infoWindow__informations__line1"></div>
+                <div class="infoWindow__informations__line2"></div>
+            </div>
+            <div class="infoWindow__details">
+                <div class="infoWindow__details__leftBlock"></div>
+                <div class="infoWindow__details__rightBlock"></div>
+            </div>
+        </div>
     </div>
     <!-- <div class="infoWindow">
         <p>This is a popup!</p>
