--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
 <body>
 
     <header class="header">
-        <h1 class="header__logo">
-            JustStreamIt
-        </h1>
+        <img class="header__logo" src="/public/img/logo.png" alt="Grapefruit slice atop a pile of other slices">
         <nav class="nav">
             <ul>
                 <li class="nav__link nav__link--active">Accueil</li>
