--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <img class="header__logo" src="/public/img/logo.png" alt="Grapefruit slice atop a pile of other slices">
         <nav class="nav">
             <ul>
-                <li class="nav__link nav__link--active">Accueil</li>
-                <li class="nav__link"> <a href="/about.html">Catégories</a> </li>
+                <li class="nav__link">Accueil</li>
+                <li class="nav__link"> <a href="#">Catégories</a> </li>
             </ul>
 
         </nav>
