Did the layout of the Highlighted movie. Needed to make an extra call to the API to retrieve movie description, hence the JS modification

--- a/index.html
+++ b/index.html
@@ -42,13 +42,17 @@
             </div>
         </div>
     </div>
-    <!-- <div class="infoWindow">
-        <p>This is a popup!</p>
-        <p>Overlay uses <b>:before</b> and <b>:after</b> pseudo-classes.</p>
-        <p>(This one does block elements on the background)</p>
-    </div> -->
+
     <main>
-        <section class="container" id="frontPageMovie"></section>
+
+        <section class="container frontPageMovie">
+            <div class="frontPageMovie__leftBlock"></div>
+                <div class="frontPageMovie__rightBlock">
+                    <div class="frontPageMovie__rightBlock__line1"></div>
+                    <div class="frontPageMovie__rightBlock__line2"></div> 
+                    <div class="frontPageMovie__rightBlock__line3"></div> 
+                </div>
+        </section>
 
         
         <section class="container" id="Best">
