Added a button to close the modal window instead of it closing on click anywhere, since it is specified that it should close via a button.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
     </section> -->
     <div class="overlay">
         <div class="infoWindow">
+            <div class="infoWindow__closebtndiv">
+                <button class="infoWindow__closebtndiv__btn">+</button>
+            </div>
             <div class="infoWindow__title">
                 <div class="infoWindow__title__line1"></div>
                 <div class="infoWindow__title__line2"></div>
